trying to add a new sidebar edited the scrollbar and fixed some issues with fetching more functionality

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -12,3 +12,20 @@ body {
   height: 100%;
   overflow: auto;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1a1b1e;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #777;
+}
